<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:backgroundTint="@color/black"
        app:liftOnScroll="true"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_marginTop="200dp"
        android:rowCount="2"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- first card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="60dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/temperature" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/temperature"
                    android:textColor="#6f6f6f"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- second card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="60dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/lenght"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/lenght"
                    android:textColor="#6f6f6f"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- third card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="60dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/speed"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <TextView
                    android:layout_marginTop="12dp"
                    android:textColor="#6f6f6f"
                    android:textSize="18sp"
                    android:text="@string/speed"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- fourth card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="60dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/volume"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/volume"
                    android:textColor="#6f6f6f"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>